Fix wrapper spacing CSS vars

--- a/astro/src/sass/components/_body.scss
+++ b/astro/src/sass/components/_body.scss
@@ -11,14 +11,14 @@ body {
   --header-height: 4rem;
   --header-spacing: 0rem;
   --header-offset: calc(var(--header-height) + var(--header-spacing));
-  --wrapper-block-spacing-s: $wrapper-block-spacing-s;
-  --wrapper-block-spacing-m: $wrapper-block-spacing-m;
-  --wrapper-block-spacing-l: $wrapper-block-spacing-l;
-  --wrapper-block-spacing-r: $wrapper-block-spacing-r;
-  --wrapper-inline-spacing-s: $wrapper-inline-spacing-s;
-  --wrapper-inline-spacing-m: $wrapper-inline-spacing-m;
-  --wrapper-inline-spacing-l: $wrapper-inline-spacing-l;
-  --wrapper-inline-spacing-r: $wrapper-inline-spacing-r;
+  --wrapper-block-spacing-s: #{$wrapper-block-spacing-s};
+  --wrapper-block-spacing-m: #{$wrapper-block-spacing-m};
+  --wrapper-block-spacing-l: #{$wrapper-block-spacing-l};
+  --wrapper-block-spacing-r: #{$wrapper-block-spacing-r};
+  --wrapper-inline-spacing-s: #{$wrapper-inline-spacing-s};
+  --wrapper-inline-spacing-m: #{$wrapper-inline-spacing-m};
+  --wrapper-inline-spacing-l: #{$wrapper-inline-spacing-l};
+  --wrapper-inline-spacing-r: #{$wrapper-inline-spacing-r};
   display: flex;
   flex-direction: column;
 
@@ -34,6 +34,5 @@ body {
 .main {
   flex: 1 0 auto;
   height: max-content;
-
   margin-top: var(--header-offset);
 }
